--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             each number is the sum of the two preceding ones. 
         </p>
         <p>
-            <img src="../DTLimages/fibonacci.png" alt="Code for obtaining fibonnaci series" width="300" height="200">
+            <img src="fibonacci.png" alt="Code for obtaining fibonnaci series" width="300" height="200">
 
         </p>
         <p> Recursion call tree for obtaining fibonacci series of n=5: </p>
