--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <p> Recursion call tree for obtaining fibonacci series of n=5: </p>
 
         <div class="video">
-            <iframe width="500" height="300" src="D:\Python\media\videos\manimfibonacci\1080p60\FibonacciRecursionTree.mp4"
+            <iframe width="500" height="300" src="FibonacciRecursionTree.mp4"
                     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen></iframe>
         </div>
@@ -83,11 +83,11 @@
             which multiplies a series of descending positive integers.
         </p>
         <p>
-            <img src="D:\DTLimages\factorial.png" alt="Code for obtaining factorial of a number" width="300" height="200">
+            <img src="factorial.png" alt="Code for obtaining factorial of a number" width="300" height="200">
         </p>
         <p> Recursion call tree for finding factorial of 5: </p>
         <div class="video">
-            <iframe width="500" height="300" src="D:\Python\media\videos\manimfact\1080p60\FactorialRecursionTree.mp4" 
+            <iframe width="500" height="300" src="FactorialRecursionTree.mp4" 
                     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen></iframe>
         </div>
